<resources>
    <string name="app_name">HPMDatabaseTutorial</string>
    <string name="Load">Load</string>
    <string name="Find">Find</string>
    <string name="Add">Add</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
    <string-array name="person">
        <item>Student</item>
        <item>Teacher</item>
    </string-array>
    <string name="delete_dialog_text">Are you sure you want to remove this element?</string>
    <string name="delete_dialog_title">Delete Element?</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>

</resources>
