<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.MainActivity">

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">


    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_student_id"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:text="ID" />

        <EditText
            android:id="@+id/edit_text_student_name"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:text="Name" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp">

        </Spinner>

        <Button
            android:id="@+id/btnload"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:onClick="loadStudents"
            android:text="@string/Load" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnadd"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:onClick="addStudent"
                android:text="@string/Add" />

            <Button
                android:id="@+id/btnfind"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:onClick="findStudent"
                android:text="@string/Find" />

            <Button
                android:id="@+id/btndelete"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:onClick="removeStudent"
                android:text="@string/Delete" />

            <Button
                android:id="@+id/btnupdate"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:onClick="updateStudent"
                android:text="@string/Update" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:onClick="seeStudents"
                android:text="See Students" />

            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:onClick="assignStudentToTeacher"
                android:text="Assign Student" />

        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>